--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -6,3 +6,10 @@ author_profile: true
 ---
 
 <h3 id="1what-amsterdam-will-receive-from-tourist-tax-if-the-event-lasts-a-week-and-you-will-have-30000-visitors">1.What Amsterdam will receive from tourist tax if the event lasts a week and you will have 30.000 visitors?</h3>
+<p>
+  According to City of Amsterdam, the details of the tourist tax are shown in Figure 1. However, from 2024 the tourist tax will rise to <a href="https://www.amsterdam.nl/en/news/budget-2024/">12. 5%</a> . And according to Statista, we learnt the average cost of an overnight stay in Amsterdam in Figure 2.
+</p>
+<p>
+  <img src="/images/tourist_tax.jpg" alt="tourist tax">
+  <span style="color:grey"> (Figure 1, Tourist Tax, resource: <a href="https://www.amsterdam.nl/en/municipal-taxes/tourist-tax-(toeristenbelasting)/">City of Amsterdam</a>) </span>
+</p>
