--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -10,15 +10,15 @@ author_profile: true
   According to City of Amsterdam, the details of the tourist tax are shown in Figure 1. However, from 2024 the tourist tax will rise to <a href="https://www.amsterdam.nl/en/news/budget-2024/">12. 5%</a> . And according to Statista, we learnt the average cost of an overnight stay in Amsterdam in Figure 2.
 </p>
 <p>
-  <img src="/images/tourist_tax.jpg" alt="tourist tax">
+  <img src="/images/tourist_tax.jpg" alt="tourist tax"> <style>.center {display: block;margin:auto;}</style>
   <span style="color:grey"> <p style="text-align:center;">(Figure 1, Tourist Tax, resource: <a href="https://www.amsterdam.nl/en/municipal-taxes/tourist-tax-(toeristenbelasting)/">City of Amsterdam</a>) </p></span>
 </p>
 <p>
-  Average cost of overnight accommodation in Amsterdam in the Netherlands from January 2019 to June 2023(in euros)
+  <p style="text-align:center;">Average cost of overnight accommodation in Amsterdam in the Netherlands from January 2019 to June 2023(in euros)</p>
 </p>
 <p>
   <img src="/images/AverageCost.jpg" alt="average price">
-  <span style="color:grey"> (Figure 2, Average cost of overnight accommodation in Amsterdam, resource: <a href="https://www.statista.com/statistics/614061/overnight-accommodation-costs-amsterdam-city/">statista</a>) </span>
+  <span style="color:grey"> <p style="text-align:center;">(Figure 2, Average cost of overnight accommodation in Amsterdam, resource: <a href="https://www.statista.com/statistics/614061/overnight-accommodation-costs-amsterdam-city/">statista</a>)  </p></span>
 </p>
 <p>
   As the event will take place in May, we refer to the average price of €294 per night in May 2023, and we assume that all 30,000 visitors will stay at the hotel. Then there will be two limiting scenarios.
