--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -10,11 +10,11 @@ author_profile: true
   According to City of Amsterdam, the details of the tourist tax are shown in Figure 1. However, from 2024 the tourist tax will rise to <a href="https://www.amsterdam.nl/en/news/budget-2024/">12. 5%</a> . And according to Statista, we learnt the average cost of an overnight stay in Amsterdam in Figure 2.
 </p>
 <p>
-  <img src="/images/tourist_tax.jpg" alt="tourist tax"> <style>.center {display: block;margin:auto;}</style>
+  <img src="/images/tourist_tax.jpg" alt="tourist tax" class="center"> 
+  <style>.center {display: block;margin:auto;}</style>
   <span style="color:grey"> <p style="text-align:center;">(Figure 1, Tourist Tax, resource: <a href="https://www.amsterdam.nl/en/municipal-taxes/tourist-tax-(toeristenbelasting)/">City of Amsterdam</a>) </p></span>
 </p>
-<p>
-  <p style="text-align:center;">Average cost of overnight accommodation in Amsterdam in the Netherlands from January 2019 to June 2023(in euros)</p>
+<p style="text-align:center;"> Average cost of overnight accommodation in Amsterdam in the Netherlands from January 2019 to June 2023(in euros)
 </p>
 <p>
   <img src="/images/AverageCost.jpg" alt="average price">
