--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -116,7 +116,7 @@ author_profile: true
   </style>
 </head>
 <body>
-  <table class="table table-bordered table-hover table-condensed">
+  <table class="fixed_header">
 <thead><tr><th title="Field #1">num</th>
 <th title="Field #2">location</th>
 <th title="Field #3">coordinate</th>
