--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -110,8 +110,8 @@ author_profile: true
      .fixed_header th,
     .fixed_header td {
        padding: 5px;
-       text-align: left;
-       width: 200px;
+       text-align: right;
+       
     }
   </style>
 </head>
