--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -90,7 +90,7 @@ author_profile: true
   <title>Location</title>
   <style>
     .fixed_header {
- 
+      width: 900px;
       table-layout: fixed;
       border-collapse: collapse;
     }
