--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -91,7 +91,7 @@ author_profile: true
   <style>
     .tableFixHead {
       overflow-y: auto; /* make the table scrollable if height is more than 200 px  */
-      height: 200px; /* gives an initial height of 200px to the table */
+      height: 300px; /* gives an initial height of 200px to the table */
     }
     .tableFixHead thead th {
       position: sticky; /* make the table heads sticky */
@@ -112,7 +112,7 @@ author_profile: true
   </style>
 </head>
 <body>
-  <table class="fixed_header">
+  <table class="tableFixHead">
 <thead><tr><th title="Field #1">num</th>
 <th title="Field #2">location</th>
 <th title="Field #3">coordinate</th>
