--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -89,7 +89,7 @@ author_profile: true
 <head>
   <title>Location</title>
   <style>
-    .tableFixHead {
+    .fixed_header {
       width: 1000px;
       table-layout: fixed;
       border-collapse: collapse;
@@ -116,7 +116,7 @@ author_profile: true
   </style>
 </head>
 <body>
-  <table class="tableFixHead">
+  <table class="fixed_header">
 <thead><tr><th title="Field #1">num</th>
 <th title="Field #2">location</th>
 <th title="Field #3">coordinate</th>
