--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -101,16 +101,16 @@ author_profile: true
       position: sticky; 
       top: 0; 
     } 
-    table { 
+    .fixTableHead table { 
       border-collapse: collapse;         
       width: 100%; 
     } 
-    th, 
-    td { 
+    .fixTableHead th, 
+    .fixTableHead td { 
       padding: 8px 15px; 
       border: 2px solid #e4e4e4; 
     } 
-    th { 
+    .fixTableHead th { 
       background: #e4e4e4; 
     } 
   </style>
