--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -89,34 +89,34 @@ author_profile: true
 <head>
   <title>Location</title>
   <style>
-    .fixTableHead { 
-      overflow-y: auto; 
-      height: 300px; 
-    } 
-    .fixTableHead tbody { 
-      overflow: auto; 
-      height: 300px; 
-    } 
-    .fixTableHead thead th { 
-      position: sticky; 
-      top: 0; 
-    } 
-    .fixTableHead table { 
-      border-collapse: collapse;         
-      width: 100%; 
-    } 
-    .fixTableHead th, 
-    .fixTableHead td { 
-      padding: 8px 15px; 
-      border: 2px solid #e4e4e4; 
-    } 
-    .fixTableHead th { 
-      background: #e4e4e4; 
-    } 
+    .fixed_header {
+        width: 400px;
+        table-layout: fixed;
+        border-collapse: collapse;
+      }
+      .fixed_header tbody {
+        display: block;
+        width: 100%;
+        overflow: auto;
+        height: 300px;
+      }
+      .fixed_header thead tr {
+        display: block;
+      }
+      .fixed_header thead {
+        background: #e4e4e4e4;
+        color: black;
+      }
+      .fixed_header th,
+      .fixed_header td {
+        padding: 5px;
+        text-align: right;
+        width: 200px;
+      }
   </style>
 </head>
 <body>
-  <table class="fixTableHead">
+  <table class="fixed_header">
 <thead><tr><th title="Field #1">num</th>
 <th title="Field #2">location</th>
 <th title="Field #3">coordinate</th>
