--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -90,7 +90,7 @@ author_profile: true
   <title>Location</title>
   <style>
     .fixed_header {
-        width: 400px;
+        width: 900px;
         table-layout: fixed;
         border-collapse: collapse;
       }
@@ -107,11 +107,15 @@ author_profile: true
         background: #e4e4e4e4;
         color: black;
       }
-      .fixed_header th,
+      .fixed_header th {
+        padding: 5px;
+        text-align: right;
+        width: 300px;
+      }
       .fixed_header td {
         padding: 5px;
         text-align: right;
-        width: 200px;
+        width: 300px;
       }
   </style>
 </head>
