--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -107,13 +107,9 @@ author_profile: true
         background: #e4e4e4e4;
         color: black;
       }
-      .fixed_header th {
-        padding: 5px;
-        text-align: right;
-        width: 300px;
-      }
+      .fixed_header th,
       .fixed_header td {
-        padding: 5px;
+        padding: 1px;
         text-align: right;
         width: 320px;
       }
