--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -90,7 +90,7 @@ author_profile: true
   <title>Location</title>
   <style>
     .fixed_header {
-        width: 960px;
+        width: auto;
         table-layout: fixed;
         border-collapse: collapse;
       }
@@ -109,9 +109,9 @@ author_profile: true
       }
       .fixed_header th,
       .fixed_header td {
-        padding: 1px;
+        padding: 5px;
         text-align: right;
-        width: 320px;
+        width: auto;
       }
   </style>
 </head>
