--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -415,7 +415,7 @@ author_profile: true
   These are the AirBnb’s at <a href="/files/StreetName.csv">1052CH</a>:
 </p>
 <body>
-  <table class="fixTableHead">
+  <table class="fixed_header">
 <thead><tr><th title="Field #1">count</th>
 <th title="Field #2">num</th>
 <th title="Field #3">location</th>
