--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -348,7 +348,7 @@ author_profile: true
 <p>
   Here are the top five <a href="/files/postcode.csv">postcodes</a> in terms of occurrences:
 </p>
-<table width="300">
+<table>
   <thead>
     <tr>
       <th>postcode
@@ -359,30 +359,30 @@ author_profile: true
   </thead>
   <tbody>
     <tr>
-      <td width="100">&nbsp;1052 CH
+      <td width: auto>&nbsp;1052 CH
       </td>
-      <td width="100">175
-      </td>
-    </tr>
-    <tr><td width="100">&nbsp;1012 AR
-    </td>
-      <td width="100">47
+      <td width: auto>175
       </td>
     </tr>
-    <tr><td width="100">&nbsp;1015 RR
+    <tr><td width: auto>&nbsp;1012 AR
     </td>
-      <td width="100">24
+      <td width: auto>47
       </td>
     </tr>
-    <tr><td width="100">&nbsp;1011 TE
+    <tr><td width: auto>&nbsp;1015 RR
     </td>
-      <td width="100">21
+      <td width: auto>24
+      </td>
+    </tr>
+    <tr><td width: auto>&nbsp;1011 TE
+    </td>
+      <td width: auto>21
       </td>
     </tr>
     <tr>
-      <td width="100">&nbsp;1015 HJ
+      <td width: auto>&nbsp;1015 HJ
       </td>
-      <td width="100">20
+      <td width: auto>20
       </td>
     </tr>
   </tbody>
