--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -348,6 +348,11 @@ author_profile: true
 <p>
   Here are the top five <a href="/files/postcode.csv">postcodes</a> in terms of occurrences:
 </p>
+<style>
+  td {
+    width: 100px;
+  }
+</style>
 <table>
   <thead>
     <tr>
@@ -359,30 +364,30 @@ author_profile: true
   </thead>
   <tbody>
     <tr>
-      <td width: auto>&nbsp;1052 CH
+      <td>&nbsp;1052 CH
       </td>
-      <td width: auto>175
+      <td>175
       </td>
     </tr>
     <tr><td width: auto>&nbsp;1012 AR
     </td>
-      <td width: auto>47
+      <td>47
       </td>
     </tr>
     <tr><td width: auto>&nbsp;1015 RR
     </td>
-      <td width: auto>24
+      <td>24
       </td>
     </tr>
-    <tr><td width: auto>&nbsp;1011 TE
+    <tr><td>&nbsp;1011 TE
     </td>
-      <td width: auto>21
+      <td>21
       </td>
     </tr>
     <tr>
-      <td width: auto>&nbsp;1015 HJ
+      <td>&nbsp;1015 HJ
       </td>
-      <td width: auto>20
+      <td>20
       </td>
     </tr>
   </tbody>
