--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -348,11 +348,14 @@ author_profile: true
 <p>
   Here are the top five <a href="/files/postcode.csv">postcodes</a> in terms of occurrences:
 </p>
-<style>
+<head>
+  <title>postcode</title>
+  <style>
   td {
     width: 100px;
   }
-</style>
+  </style>
+</head>
 <table>
   <thead>
     <tr>
