--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -111,7 +111,7 @@ author_profile: true
       .fixed_header td {
         padding: 5px;
         text-align: right;
-        width: 150px;
+        width: auto;
       }
   </style>
 </head>
