--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -116,7 +116,12 @@ author_profile: true
   </style>
 </head>
 <body>
-  <table class="fixed_header">
+<table class="fixed_header">
+<colgroup >
+    <col width="5%"/>
+    <col width="65%"/>
+    <col width="30%"/>
+</colgroup>
 <thead><tr><th title="Field #1">num</th>
 <th title="Field #2">location</th>
 <th title="Field #3">coordinate</th>
