--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -86,42 +86,13 @@ author_profile: true
 <p>
   Here is part of <a href="/files/location.csv">csvfile: location</a>:
 </p>
-<head>
-  <title>Location</title>
-  <style>
-    .fixed_header {
-        width: auto;
-        table-layout: fixed;
-        border-collapse: collapse;
-      }
-      .fixed_header tbody {
-        display: block;
-        width: 100%;
-        overflow: auto;
-        height: 300px;
-      }
-      .fixed_header thead tr {
-        display: block;
-      }
-      .fixed_header thead {
-        background: #e4e4e4e4;
-        color: black;
-      }
-      .fixed_header th,
-      .fixed_header td {
-        padding: 5px;
-        text-align: right;
-        width: auto;
-      }
-  </style>
-</head>
-<body>
+
+<div>
+.dataTables_scroll
+{
+  overflow:auto;
+}
 <table class="fixed_header">
-<colgroup >
-    <col width="5%"/>
-    <col width="65%"/>
-    <col width="30%"/>
-</colgroup>
 <thead><tr><th title="Field #1">num</th>
 <th title="Field #2">location</th>
 <th title="Field #3">coordinate</th>
@@ -332,7 +303,8 @@ author_profile: true
 <td>(52.34204645, 4.909319813263932)</td>
 </tr>
 </tbody></table>
-</body>
+jQuery('.dataTable').wrap('<div class="dataTables_scroll" />');
+</div>
 
 <p>
   We can see that not all addresses have the same format, but the second last position is the postcode, so we’re going to extract the postcode information for each address.
