--- a/_pages/assignment-3.html
+++ b/_pages/assignment-3.html
@@ -92,7 +92,7 @@ author_profile: true
 {
   overflow:auto;
 }
-<table class="fixed_header">
+<table class="dataTable">
 <thead><tr><th title="Field #1">num</th>
 <th title="Field #2">location</th>
 <th title="Field #3">coordinate</th>
