--- a/_pages/assignment-4.html
+++ b/_pages/assignment-4.html
@@ -133,7 +133,7 @@ author_profile: true
   <title>Location</title>
   <style>
     .fixed_header {
-        width: auto;
+        width: 960px;
         table-layout: fixed;
         border-collapse: collapse;
       }
