--- a/_pages/assignment-4.html
+++ b/_pages/assignment-4.html
@@ -154,7 +154,7 @@ author_profile: true
       .fixed_header td {
         padding: 5px;
         text-align: right;
-        width: auto;
+        width: 150px;
       }
   </style>
 </head>
